--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,9 @@
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
 
+trigger:
+  - develop
+
 pool:
   vmImage: 'VS2017-Win2016'
 
@@ -30,13 +33,13 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-# Archive Files
-# Archive files using compression formats such as .7z, .rar, .tar.gz, and .zip.
-- task: ArchiveFiles@2
+- task: CopyFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)' 
-    #includeRootFolder: 
-    archiveType: 'zip' # Options: zip, 7z, tar, wim
-    tarCompression: 'gz' # Optional. Options: gz, bz2, xz, none
-    archiveFile: '$(System.DefaultWorkingDirectory)/$(Build.BuildId).zip' 
-    replaceExistingArchive: true 
+    Contents: 'Templates\**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
