--- a/AdventureWorks.Infrastructure/packages.config
+++ b/AdventureWorks.Infrastructure/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net462" />
+  <package id="Serilog" version="2.7.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
 </packages>
