--- a/AdventureWorks.API/packages.config
+++ b/AdventureWorks.API/packages.config
@@ -12,14 +12,23 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault" version="3.0.5" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.WebKey" version="3.0.5" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Serilog" version="2.7.1" targetFramework="net461" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
   <package id="Swashbuckle" version="5.3.1" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.3.1" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
 </packages>
