--- a/AdventureWorks.Services/packages.config
+++ b/AdventureWorks.Services/packages.config
@@ -1,15 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault" version="3.0.5" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.WebKey" version="3.0.5" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Serilog" version="2.9.0" targetFramework="net461" />
   <package id="Serilog.Sinks.AzureTableStorage" version="4.0.0" targetFramework="net461" />
   <package id="Serilog.Sinks.PeriodicBatching" version="2.1.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net461" />
 </packages>
