--- a/AdventureWorks.Web/packages.config
+++ b/AdventureWorks.Web/packages.config
@@ -20,8 +20,19 @@
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault" version="3.0.5" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.WebKey" version="3.0.5" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search" version="10.1.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Common" version="10.1.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Data" version="10.1.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Service" version="10.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net461" />
@@ -31,10 +42,19 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net461" />
+  <package id="Microsoft.Spatial" version="7.5.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
